--- a/api_backend/templates/reset_password.html
+++ b/api_backend/templates/reset_password.html
@@ -44,14 +44,26 @@
 
 <body>
     <div class="container">
-        <h2>Password Reset</h2>
-        <p>If you requested a password reset, please click the link below:</p>
+        <h2>密碼重置 - Password Reset</h2>
+        <hr />
         <p>
-            <a href="{{ reset_url }}">Reset Your Password</a>
+            如果您需要重置密碼，請點擊下方連結：<br />
+            If you required a password reset, please click the link below:
         </p>
-        <p>For security purposes, please use the following passphrase:</p>
+        <p>
+            <a href="{{ reset_url }}">
+                重置密碼 | Password Reset
+            </a>
+        </p>
+        <p>
+            基於安全考量，請在重置頁面輸入下列安全碼：<br />
+            For security purposes, please use the following passphrase:
+        </p>
         <p class="check-string">{{ salt }}</p>
-        <p>If you did not request this change, please ignore this email.</p>
+        <p>
+            若您沒有密碼重置請求，請忽略此信件。<br />
+            If you did not request this change, please ignore this email.
+        </p>
     </div>
 </body>
 
